kubernetes/core/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    tailscale.com/hostname: "grafana"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - "grafana"
  rules:
    -  http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-shared-service
                port:
                  number: 3000
